--- a/VarshaWeb/VarshaWeb.csproj
+++ b/VarshaWeb/VarshaWeb.csproj
@@ -181,13 +181,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="BAL\EmployeeManagement\BranchMasterBal.cs" />
-    <Compile Include="BAL\EmployeeManagement\CompanyMasterBal.cs" />
-    <Compile Include="BAL\EmployeeManagement\DepartmentMasterBal.cs" />
-    <Compile Include="BAL\EmployeeManagement\DesignationMasterBal.cs" />
-    <Compile Include="BAL\EmployeeManagement\DivisionMasterBal.cs" />
-    <Compile Include="BAL\EmployeeManagement\EmployeeDashboardBal.cs" />
-    <Compile Include="BAL\EmployeeManagement\RegionMasterBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_BranchBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_CompanyMasterBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_DepartmentBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_DesignationBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_DivisionBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_BasicInfoBal.cs" />
+    <Compile Include="BAL\EmployeeManagement\Emp_RegionBal.cs" />
     <Compile Include="BAL\NavigationBal.cs" />
     <Compile Include="BAL\UsersGroup.cs" />
     <Compile Include="Controllers\EmployeeManagement\EmployeeDashboardController.cs" />
@@ -8193,17 +8193,14 @@
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
-    <Content Include="Scripts\Angular\CommonJs.js" />
-    <Content Include="Scripts\Angular\DAL.js" />
-    <Content Include="Scripts\Angular\EmployeeManagement\DAL\CommonJs.js" />
-    <Content Include="Scripts\Angular\EmployeeManagement\DAL\DAL.js" />
-    <Content Include="Scripts\Angular\EmployeeManagement\DAL\Navigation.js" />
-    <Content Include="Scripts\Angular\EmployeeManagement\JS\NewEmployee.js" />
+    <Content Include="Scripts\Angular\DAL\CommonJs.js" />
+    <Content Include="Scripts\Angular\DAL\DAL.js" />
+    <Content Include="Scripts\Angular\DAL\Navigation.js" />
+    <Content Include="Scripts\Angular\EmployeeManagement\JS\EmployeeRequest.js" />
     <Content Include="Scripts\Angular\EmployeeManagement\JS\ViewEmployee.js" />
-    <Content Include="Scripts\Angular\EmployeeManagement\Services\NewEmployeeServices.js" />
+    <Content Include="Scripts\Angular\EmployeeManagement\Services\EmployeeRequestServices.js" />
     <Content Include="Scripts\Angular\EmployeeManagement\Services\ViewEmployeeDetailService.js" />
     <Content Include="Scripts\Angular\EmployeeManagement\Services\ViewEmployeeServices.js" />
-    <Content Include="Scripts\Angular\Navigation.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\errors.json" />
