--- a/VarshaWeb/VarshaWeb.csproj
+++ b/VarshaWeb/VarshaWeb.csproj
@@ -201,45 +201,45 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\EmployeeManagement\Emp_AdditionalInformationModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_AwardsDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_BankingDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_BasicInfoModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_BranchModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_BusinessVerticalModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_ClientMasterDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_CompanyMasterModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_CostCentreModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_CountryModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_DepartmentModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_DesignationModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_DisciplinaryDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_DivisionModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_DocumentsUploadModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_EducationalDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_EmergencyContactModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_EmployementTypeModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_FamilyDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_GovernmentDocumentsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_GradeModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_HomeAddressModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_InsuranceDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_JobDescriptionModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_LanguagesModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_MedicalInformationModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_MoreInformationModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_OfficeAddressModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_PermanentAddressModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_ProductModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_PublicationDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_ReferenceDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_RegionModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_RelativesInStaffModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_RoleModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_SocialProfileModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_VendorMasterDetailsModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_VisaInformationModels.cs" />
-    <Compile Include="Models\EmployeeManagement\Emp_WorkExperienceModels.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_AdditionalInformationModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_AwardsDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_BankingDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_BasicInfoModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_BranchModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_BusinessVerticalModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_ClientMasterDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_CompanyMasterModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_CostCentreModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_CountryModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_DepartmentModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_DesignationModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_DisciplinaryDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_DivisionModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_DocumentsUploadModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_EducationalDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_EmergencyContactModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_EmployementTypeModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_FamilyDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_GovernmentDocumentsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_GradeModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_HomeAddressModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_InsuranceDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_JobDescriptionModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_LanguagesModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_MedicalInformationModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_MoreInformationModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_OfficeAddressModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_PermanentAddressModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_ProductModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_PublicationDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_ReferenceDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_RegionModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_RelativesInStaffModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_RoleModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_SocialProfileModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_VendorMasterDetailsModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_VisaInformationModel.cs" />
+    <Compile Include="Models\EmployeeManagement\Emp_WorkExperienceModel.cs" />
     <Compile Include="Models\NavigationModel.cs" />
     <Compile Include="Models\RESTOption.cs" />
     <Compile Include="Models\UserGroupModel.cs" />
@@ -9192,6 +9192,7 @@
     <Content Include="Views\EmployeeDashboard\AddEmployeeBasicInfo.cshtml" />
     <Content Include="Views\EmployeeDashboard\Index.cshtml" />
     <Content Include="Views\EmployeeDashboard\EmployeeDetails.cshtml" />
+    <Content Include="Views\EmployeeDashboard\EmployeeEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
